<?xml version="1.0"?>
<package format="2">
  <name>orb_slam2</name>
  <version>0.0.0</version>
  <description>todo</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>  
  
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
</package>
